--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #cab9dd;
   }
 }
 
@@ -36,22 +36,18 @@ body {
 .input-container {
   position: fixed;
   left: 50%;
-  transform: translateX(-50%) translateY(50vh); /* Başlangıç konumu: orta-alt */
+  transform: translateX(-50%) translateY(60vh);
+  /* Başlangıç konumu: orta-alt */
   transition: transform 1s ease-in-out;
   z-index: 1000;
 }
 
 .input-container.move-up {
-  transform: translateX(-50%) translateY(20vh); /* Bitiş konumu: orta-üst */
+  transform: translateX(-50%) translateY(5vh);
+  /* Bitiş konumu: orta-üst */
 }
 
 input {
-  padding: 12px 20px;
-  font-size: 18px;
-  border: 2px solid #000000;
-  border-radius: 8px;
-  outline: none;
-  transition: border-color 0.3s;
   max-width: 700px;
   width: 100%;
 }
@@ -59,3 +55,22 @@ input {
 input:focus {
   border-color: #000000;
 }
+
+.current-weather {
+  max-width: 1200px;
+  width: 100%;
+  height: 350px;
+  color: white;
+  background-image: url('../../public/view.png');
+}
+
+
+.main-weather > img{
+  width: 180px;
+}
+.color-white {
+  color: white
+}
+
+
+
